best so far at apple only on iphone latest gen images could be larger

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   flex-direction: column;
   justify-content: center;
   background-color: black;
-  position: relative;
 }
 
 .body_white {
@@ -220,7 +219,7 @@ nav {
   align-items: center;
   width: 760px;
   height: 840px;
-  border: 2px solid greenyellow;
+  border: 2px solid violet;
   z-index: 0;
 }
 
@@ -272,7 +271,7 @@ nav {
 
 .box-transparent-middle {
   background-color: hsla(0,0%,0%,0);
-  width: 670px;
+  width: 760px;
   height: 100%;
   margin: 0 auto;
 }
@@ -351,7 +350,7 @@ li {
     font-weight: 500;
   }
   .carousel_white {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
@@ -361,7 +360,7 @@ li {
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_black {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   .frame-overlay-dark-grey {
     display: none;
@@ -410,7 +409,7 @@ li {
     font-weight: 500;
   }
   .carousel_white {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
@@ -420,7 +419,7 @@ li {
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_black {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   .frame-overlay-dark-grey {
     display: none;
@@ -469,7 +468,7 @@ li {
     font-weight: 500;
   }
   .carousel_white {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
@@ -479,7 +478,7 @@ li {
   }
   /* ================================================= carousel white buy ================================================= */
   .carousel_black {
-    margin-top: 76px;
+    margin-top: 56px;
   }
   .frame-overlay-dark-grey {
     display: none;
