after rename to deedisco

--- a/src/App.css
+++ b/src/App.css
@@ -775,5 +775,5 @@ li {
 /*---------------------------------------------------- MEDIA QUERIES end -------------------------------------------------------*/
 /*==============================================================================================================================*/
 
-
+/* update */
 
