--- a/src/App.css
+++ b/src/App.css
@@ -431,7 +431,7 @@ li {
 
 /* ipads are not OK */
 
-/* BEFORE ADJUSTING .CarouselSize */
+/* TEST .CarouselSize */
 
 
 /* anything under 320px width */
@@ -442,6 +442,7 @@ li {
   .CarouselSize {
     width: 278px;
     height: 120px;
+    border: 2px solid red;
   }
   .hue_rotate {
     width: 278px;
@@ -499,6 +500,7 @@ li {
   .CarouselSize {
     width: 278px;
     height: 120px;
+    border: 2px solid green;
   }
   .hue_rotate {
     width: 278px;
@@ -556,6 +558,7 @@ li {
   .CarouselSize {
     width: 342px;
     height: 148px;
+    border: 2px solid blue;
   }
   .hue_rotate {
     width: 342px;
@@ -613,6 +616,7 @@ li {
   .CarouselSize {
     width: 574px;
     height: 248px;
+    border: 2px solid cyan;
   }
   .hue_rotate {
     width: 574px;
@@ -653,6 +657,7 @@ li {
   .CarouselSize {
     width: 565px;
     height: 244px;
+    border: 2px solid magenta;
   }
   .hue_rotate {
     width: 565px;
@@ -693,6 +698,7 @@ li {
   .CarouselSize {
     width: 565px;
     height: 244px;
+    border: 2px solid yellow;
   }
   .hue_rotate {
     width: 565px;
@@ -733,6 +739,7 @@ li {
   .CarouselSize {
     width: 565px;
     height: 244px;
+    border: 2px solid orange;
   }
   .hue_rotate {
     width: 565px;
@@ -778,6 +785,7 @@ li {
   .CarouselSize {
     height: 220px;
     width: 513px;
+    border: 2px solid purple;
   }
   .hue_rotate {
     height: 220px;
@@ -794,6 +802,7 @@ li {
   .CarouselSize {
     height: 236px;
     width: 550px;
+    border: 2px solid lightgreen;
   }
   .hue_rotate {
     height: 236px;
