TEST_.carousel_container scale down for mobile EXPERIMENT for APPLE

--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,8 @@ nav {
 .carousel-container {
   position: relative;
   margin-bottom: 80px;
+  border: 2px solid pink;
+  transform: scale(0.8);
 }
 
 .frame-overlay-dark-grey {
