propagate terms page with content

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,18 @@
   text-align: left;
 }
 
+.terms_and_conditions {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 760px;
+  margin-top: 80px;
+  transform-origin: top center;
+  font-size: 12px;
+  text-align: left;
+}
+
 .sizes_container {
   display: flex;
   flex-direction: column;
