--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,6 @@
 
 /* ================================================= like page content END ===================================================== */
 
-
 /* ============================================================================================================================= */
 /* ================================================= user input FORM element START ============================================= */
 /* ============================================================================================================================= */
@@ -269,19 +268,19 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 /* ================================================= user input FORM element END =============================================== */
 /* ============================================================================================================================= */
 
-
 /* ============================================================================================================================= */
 /* ============================================= social media join us buttons START ============================================ */
 /* ============================================================================================================================= */
 
 .social_media_container {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-top: 40px;
   text-align: center;
 }
 
 .social_media_text {
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .social_buttons {
@@ -295,8 +294,8 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   align-items: center;
   justify-content: center;
   padding: 8px 16px;
-  border-radius: 4px;
-  font-size: 14px;
+  border-radius: 8px;
+  font-size: 18px;
   font-weight: 500;
   text-decoration: none;
   color: white;
@@ -324,12 +323,9 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 /* ============================================= social media join us buttons END ============================================== */
 /* ============================================================================================================================= */
 
-
 /* ==================================================================================================== */
 /* ========================================= NAVIGATION START ========================================= */
 /* ==================================================================================================== */
-
-
 
 button {
   text-decoration: none;
@@ -395,7 +391,7 @@ nav {
   align-items: center;
   height: 38px;
   background-color: hsl(0,0%,0%);
-  position: relative; /* Ensure it's properly stacked */
+  position: relative;
 }
 
 .nav_links {
@@ -545,7 +541,6 @@ nav {
 
 /* overlap boxes END */
 
-
 h1 {
   margin-top: 40px;
   margin-bottom: 40px;
@@ -559,7 +554,6 @@ li {
   text-decoration: none;
 }
 
-
 /*==========================================================================================================================*/
 /*==========================================================================================================================*/
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
@@ -568,10 +562,9 @@ li {
 
 /* apple iPhones buy page is OK other pages the drawing is smaller than screen by a lot...*/
 
-/* ipads are not OK */
+/* ipads are not OK ??? */
 
 /* TEST .CarouselSize */
-
 
 /* anything under 320px width */
 @media only screen 
