--- a/src/App.css
+++ b/src/App.css
@@ -273,19 +273,19 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 /* ============================================================================================================================= */
 
 .social_media_container {
-  margin-top: 60px;
+  margin-bottom: 60px;
   text-align: center;
 }
 
 .social_media_text {
   margin-bottom: 10px;
   font-size: 24px;
+  color:#888888;
 }
 
 .social_buttons {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
 }
 
 .social_button {
