telegram link added

--- a/src/App.css
+++ b/src/App.css
@@ -319,6 +319,11 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   background-color: #5865f2;
 }
 
+.telegram_button {
+  background-color: #0088cc;
+}
+
+
 /* ============================================================================================================================= */
 /* ============================================= social media join us buttons END ============================================== */
 /* ============================================================================================================================= */
